[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Cache"
authors = [{name = "KOLANICH"}]
description = "Just a library implementing a dumb compressed cache for JSON-serializeable objects."
readme = "ReadMe.md"
keywords = ["cache"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg-org/KOLANICH-libs/Cache.py"}
requires-python = ">=3.4"
dependencies = [
	"transformerz", # @ git+https://codeberg.org/KOLANICH-libs/transformerz.py
	"pantarei", # @ git+https://codeberg.org/KOLANICH-libs/pantarei.py
]
dynamic = ["version"]

[project.optional-dependencies]
#bson = ["transformerz[bson]"] # it doesn't allow primitives (strings, ints) at root level and also is not the most compact binary JSON impl
cbor = ["transformerz[cbor]"]
msgpack = ["transformerz[msgpack]"]
lz4 = ["transformerz[lz4]"]
brotli = ["transformerz[brotli]"]
zstd = ["transformerz[zstandard]"]
lmdb = ["lmdb"]

[tool.setuptools]
zip-safe = true
packages = ["Cache", "Cache.storageBackends"]

[tool.setuptools_scm]
